--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,21 +7,25 @@
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+body {
+  font-family: 'Poppins';
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+
+.homepage {
+  background-color: #002866;
+  height: 100%;
+  /* border-: 20%; */
+}
+.nav-wrap {
+  display: flex;
+  justify-content: space-between;
+  margin-left: 30px;
+}
+.nav-logo {
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  /* background: rgb(255, 202, 0); */
+  border-radius: 46%;
+  width: 150px;
+height: 47.83px;
 }
