--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,7 +20,8 @@ body {
 .nav-wrap {
   display: flex;
   justify-content: space-between;
-  margin-left: 30px;
+  padding-left: 30px;
+  background-color: #002866;
 }
 .nav-logo {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
@@ -28,4 +29,30 @@ body {
   border-radius: 46%;
   width: 150px;
 height: 47.83px;
+margin-top: 35px;
+}
+.navoptions-flex {
+  display: flex;
+  margin: 37px 0 45px 0;
+}
+.nav-home {
+  border: 2px solid #FFFFFF;
+border-radius: 50px;
+font-weight: 400;
+font-size: 22px;
+line-height: 33px;
+width: 120px;
+height: 41px;
+color: #FFFAFA;
+text-align: center;
+margin-right: 24px;
+}
+.nav-home:hover {
+  background: #EA8F2A;
+}
+.cart {
+  margin-left: 41px;
+}
+.person {
+  margin: 0 19px 0 25px 
 }
